--- a/package.json
+++ b/package.json
@@ -13,15 +13,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anijitsahu/react-app-simple-music-app.git"
+    "url": "git+https://github.com/rishabh672003/music-app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anijitsahu/react-app-simple-music-app/issues"
-  },
-  "homepage": "https://github.com/anijitsahu/react-app-simple-music-app#readme",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
